# xiterm-thai

./: .cvsignore  Changelog  Make.common.in  Makefile.in  README  README.thai  autogen.sh  config.h.in  configure  configure.in  xiterm+thai.spec  xiterm+thai.spec.in
compatibility/: README  XTerm.ad  bashrc  inputrc  xterm.tcap  xterm.ti
data/: Makefile.in
debian/: BUILDING  README.Debian  changelog  control  copyright  docs  examples  inputrc  install  lintian-overrides  manpages  menu  postinst  prerm  rules  txiterm  txiterm.1  watch  xiterm+thai-icon.uuencode  xiterm+thai.desktop
doc/: .cvsignore  BUGS  COPYRIGHT.HISTORY  FAQ  HISTORY  LSM.in  Makefile.in  README.rxvt.greek  TODO  rxvt.ref  xiterm+thai.1.in  xiterm-1.0.lsm
src/: .cvsignore  Makefile.huiIRIX  Makefile.in  command.c  command.c.org  command.h  debug.c  debug.h  defaults.h  feature.h  feature.h.org  graphics.c  graphics.h  grkelot.c  grkelot.h  main.c  main.c.org  main.h  misc.c  misc.h  netdisp.c  oldthai.c  screen.c  screen.c.org  screen.h  scrollbar.c  scrollbar.h  thai.c  thai.h  thaikb.c  thaikb.h  utmp.c  xdefaults.c  xdefaults.c.org  xdefaults.h
src/Xtensions/graphics/: Makefile.in  command.c  feature.h  graphics.h  main.c  rxvtgrx.h  screen.c  screen.h
src/Xtensions/menubar+graphics/: Makefile.in  README  command.c  command.h  feature.h  graphics.c  main.c  main.h  menubar.c  menubar.h
test/: ISO-8859-1  README  TIS-620  color
test/graphics/: Makefile.in  README  grxlib.c  grxlib.h  qplot.c
test/menus/: jedmenu.sl  menu.sh
